testsuite/keen.dg/array-019.c

/* { dg-do "compile" } */

int
main()
{

 char string[0] = { 1 }; /* { dg-error "array size" "" } */

}

